--- a/docs/economics/network-health.mdx
+++ b/docs/economics/network-health.mdx
@@ -2,3 +2,49 @@
 sidebar_position: 3
 title: Network Health and Stability
 ---
+
+## Measuring Network Health
+
+The file storage protocol makes a perpetual commitment: once a user pays to store a file, the network must maintain that file forever. This creates a coordination problem across thousands of independent storage nodes making individual economic decisions. The protocol cannot directly control whether nodes join or leave—it can only shape incentives. The challenge is to design an incentive structure that keeps files safely replicated even as node operators respond to changing profitability, market conditions, and operational costs.
+
+To manage this, the protocol needs a quantitative measure of whether the network is fulfilling its commitments. The most obvious metric would be counting how many files are at or near minimum replication, but this is reactive—it measures failure rather than health. A better approach is to track the aggregate replication level across the network and use this as a forward-looking indicator. When aggregate replication is high, the system has buffer against shocks; when it falls, the system needs to respond before individual files become critically under-replicated.
+
+Kontor uses emission-weighted replication $R(t) = \sum(\omega_f \cdot |N_f|) / \Omega(t)$, where each file's replication count is weighted by its emission weight $\omega_f$. This means economically important files—those created early or those that are larger—contribute proportionally more to the metric. A file representing 10% of network emissions contributes 10% to the health measurement. This weighting ensures the protocol prioritizes maintaining replication on high-value files, where "value" is defined by the file's ongoing cost to the network in terms of inflation.
+
+The metric is smoothed over a trailing window using a weighted moving average, giving more weight to recent observations. This filtering prevents the system from overreacting to temporary fluctuations while still responding to genuine trends. The critical reference point is $n_{min}$, the minimum required replication. The health buffer $m(t) = R(t) - n_{min}$ represents how much room exists above this threshold. A large positive buffer indicates a healthy network; a shrinking buffer signals growing risk.
+
+## Dynamic Emission Response
+
+The protocol's ability to guarantee perpetual storage depends on maintaining adequate economic incentives for storage nodes. If rewards fall too low relative to costs, rational operators will exit, reducing replication and potentially causing files to drop below minimum thresholds. The protocol cannot force nodes to participate, but it can adjust the reward structure to make participation more attractive when needed.
+
+This is achieved through a dynamic emission multiplier $\alpha(t)$ that modulates the baseline inflation rate based on network health. Total emissions each block are $\varepsilon(t) = \text{KOR}_{total}(t-1) \cdot \alpha(t-1) \cdot \mu_0 / B$, where $\mu_0$ is the baseline annual inflation rate and $\alpha(t)$ adjusts in response to the health buffer. When the buffer is large, $\alpha(t)$ stays near 1, keeping inflation at the baseline. As the buffer shrinks, $\alpha(t)$ increases, raising emissions and making storage more profitable. If the buffer reaches zero—meaning weighted average replication has fallen to the minimum threshold—$\alpha(t)$ immediately jumps to its maximum value $\alpha_{max}$.
+
+This counter-cyclical policy is analogous to monetary policy in traditional economies: expand the money supply during stress, contract during stability. The mathematical form is $\alpha(t) = \min(\alpha_{max}, 1 + \kappa_\alpha / m(t))$ when $m(t) > 0$, creating an inverse relationship where the emission multiplier accelerates as problems worsen. A small deterioration produces a modest increase; a severe deterioration produces a strong response. The parameter $\kappa_\alpha$ controls sensitivity—how aggressively the system responds to changes in health.
+
+The adjustment mechanism is deterministic and transparent. Every participant can observe the health metric and calculate the resulting emission rate. This predictability allows nodes to forecast expected rewards and make informed decisions about participation. The protocol updates the multiplier at the end of each block based on current conditions, and this updated value determines emissions for the subsequent block.
+
+## Feedback Loops and Equilibrium
+
+Understanding system stability requires examining the feedback loops that connect network health, emissions, and node behavior. The intended stabilizing mechanism works as follows: declining replication triggers higher emissions, which increases per-node profitability, which attracts new participants or retains existing ones, which raises replication, which eventually reduces emissions back toward baseline. This negative feedback loop creates a self-regulating system that tends toward equilibrium without requiring governance intervention.
+
+However, the system also contains a potentially destabilizing positive feedback loop operating through external market prices. If the KOR/USD exchange rate falls, storage nodes' fiat-denominated profitability declines even if KOR-denominated rewards remain constant. This may cause exits, reducing replication and triggering emission increases. Higher emissions expand KOR supply, which can put additional downward pressure on the exchange rate, amplifying the initial shock. This pro-cyclical dynamic represents a systemic vulnerability, particularly during market stress or loss of confidence.
+
+The overall stability depends on which feedback loop dominates. When the health buffer is positive and the emission multiplier is below its maximum, the stabilizing monetary policy can effectively counteract deteriorating conditions by making storage more profitable. The system self-corrects through purely economic mechanisms. However, if conditions worsen to the point where $\alpha(t) = \alpha_{max}$ for extended periods, the stabilizing mechanism saturates—it has no more room to increase incentives. At this point, recovery depends on exogenous factors: improved market sentiment, reduced operational costs, or increased demand for storage services.
+
+This design accepts that no purely endogenous mechanism can guarantee stability under all conditions. Instead, it provides strong self-correction within a bounded range of stress, while acknowledging that extreme shocks may require time and favorable external conditions to resolve. The emission cap $\alpha_{max}$ represents an explicit trade-off: it prevents unlimited inflation but also limits the protocol's corrective power during severe crises.
+
+## The Vulnerability Penalty
+
+Beyond adjusting global emissions, the protocol uses targeted mechanisms to prevent cascading failures. The leave fee $\varphi_{leave}(f,t) = k_f \cdot (n_{min} / |N_f|)^2$ creates a direct cost for exits that scales with file vulnerability. When a file has replication far above the minimum, the fee is negligible—nodes can leave freely when storage becomes unprofitable. As replication approaches $n_{min}$, the fee grows quadratically, becoming prohibitively expensive precisely when additional exits would be most harmful.
+
+This structure creates hysteresis in node behavior. Nodes join when expected profit exceeds zero, but they require much larger losses before exiting becomes rational due to the leave fee. The gap between entry and exit thresholds stabilizes replication by preventing churn—nodes do not repeatedly join and leave in response to small profit fluctuations. For files near minimum replication, the high exit barrier means nodes must experience substantial sustained losses before departure makes economic sense, providing a cushion against cascading exits during temporary market stress.
+
+The fee is burned rather than redistributed to remaining nodes. This design prevents strategic behavior where nodes might engineer exits to capture redistributed fees, or where colluding groups might profit from coordinated departures. Burning ensures the decision calculus is simple: exiting costs you money with no compensating benefit to anyone. This makes leaves a pure deadweight loss that rational operators prefer to avoid.
+
+## Self-Correction Mechanisms
+
+The protocol's self-correcting behavior emerges from the interaction of multiple simultaneous mechanisms. When a file becomes under-replicated, the emission-weighted health metric $R(t)$ falls, triggering increased total emissions through $\alpha(t)$. These higher emissions distribute across all files proportionally to their weights, but under-replicated files see larger per-node increases because the same total is divided among fewer participants. The leave fee increases quadratically, raising the cost of further exits. If nodes fail challenges and get slashed, a portion of their slashed stake redistributes to remaining honest nodes, directly improving their profitability.
+
+These forces compound to create progressively stronger correction as problems worsen. Small deviations from equilibrium produce gentle nudges; large deviations produce powerful responses. No central coordination is required. Each node makes independent decisions based on local profitability calculations, but the aggregate behavior stabilizes because individual incentives are designed to align with collective network needs. A rational operator seeking to maximize profit will naturally choose actions that support network health.
+
+The system's dynamic characteristics—response speed, stability margins, tendency to overshoot or oscillate—depend on protocol parameters like the health averaging window $W_R$ and emission sensitivity $\kappa_\alpha$. These represent fundamental trade-offs. Longer averaging windows make the system more stable against noise but slower to detect genuine problems. Higher sensitivity produces faster corrections but risks overreacting to transient conditions. The chosen parameters reflect a balance informed by economic modeling and simulation, designed to provide adequate responsiveness without inducing volatility or instability in the emission rate.
