--- a/docs/kontor/tokenomics.mdx
+++ b/docs/kontor/tokenomics.mdx
@@ -14,4 +14,4 @@ mode: wide
 
 ## Learn More
 
-For a comprehensive analysis of KOR tokenomics, emission schedules, and the economic mechanisms that sustain the protocol, see the [Economic Model](/docs/kontor/resources/economic-model) document.
+For a comprehensive analysis of KOR tokenomics, emission schedules, and the economic mechanisms that sustain the protocol, see the section on [Kontor Economics](/docs/economics/perpetual) and the [Economic Model](/docs/kontor/resources/economic-model) document.
