--- a/docs/kontor/resources/economic-model.mdx
+++ b/docs/kontor/resources/economic-model.mdx
@@ -7,9 +7,11 @@ mode: wide
 
 The economic model document provides detailed analysis of KOR tokenomics, emission schedules, and the economic incentives that sustain the protocol.
 
-<Card title="Download Economic Model" icon="file-pdf" href="/img/2025-10-07_kontor-economic-model.pdf">
-  Read the complete economic analysis and tokenomics specification (PDF)
-</Card>
+<a href="/img/2025-10-07_kontor-economic-model.pdf" target="_blank" className="block">
+  <Card title="Download Economic Model" icon="file-pdf">
+    Read the complete economic analysis and tokenomics specification (PDF)
+  </Card>
+</a>
 
 ## Key Topics Covered
 
