--- a/docs/kontor/resources/whitepaper.mdx
+++ b/docs/kontor/resources/whitepaper.mdx
@@ -5,7 +5,7 @@ mode: wide
 
 The comprehensive Kontor whitepaper provides in-depth technical details about the protocol design, architecture, and implementation.
 
-<a href="/img/2025-08-30_kontor-whitepaper.pdf" target="_blank" className="block">
+<a href="https://raw.githubusercontent.com/KontorProtocol/Documentation/main/img/2025-08-30_kontor-whitepaper.pdf" target="_blank" className="block">
   <Card title="Download Kontor Whitepaper" icon="file-pdf">
     Read the full technical specification and protocol design (PDF)
   </Card>
